task: fix status-bar vertical alignment
* setting status bar height has no effect
* vertical align center works middle doesnt.

--- a/styles/terminus.less
+++ b/styles/terminus.less
@@ -113,12 +113,11 @@
 
   &.status-bar {
     position: relative;
-    vertical-align: middle;
+    vertical-align: center;
     display: inline;
     -webkit-user-select: none;
     margin: 0 10px;
     box-sizing: content-box;
-    height: @status-bar-height;
 
     i {
       cursor: pointer;
